--- a/backend/package.json
+++ b/backend/package.json
@@ -3,20 +3,29 @@
   "module": "server.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch index.ts"
+    "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
+    "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5",
-    "winston": "^3.13.1"
+    "winston": "^3.13.1",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
+    "bun-types": "^1.1.21",
+    "typescript": "^5.5.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
