--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
+    "ioredis": "^5.4.1",
     "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5",
